--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,3 +8,47 @@
  padding: 0;
  box-sizing: border-box;
 }
+body{
+  overflow-x: hidden;
+}
+
+
+@media (max-width:1280px) {
+  .mainContainer {
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+      }
+}
+
+
+
+@media (min-width: 1280px) {
+  .mainContainer {
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+    /* border: 1px solid red; */
+      }
+  
+ }
+
+ 
+
+ @media (min-width: 1440px) {
+  .mainContainer {
+    width: 1440px; 
+    padding: 0;
+  }
+ }
+
+
+@media (min-width: 1750px) {
+  .mainContainer {
+    width: 1440px; 
+    padding: 0;
+  }
+ }
+
+
+ 
