--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
   
   
-  * {
- font-family: "Golos Text";
- margin: 0;
- padding: 0;
- box-sizing: border-box;
-}
-body{
+  /* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    } */
+    body{
+  font-family: "Golos Text";
   overflow-x: hidden;
   color: #000;
 }
