--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,5 +50,16 @@ body{
   }
  }
 
+ @media(max-width:1024px){
+  .lever{
+    display:flex;
+    flex-direction: column-reverse;
+  }
+  .main_box_hidden{
+    display: hidden;
+    display: none;
+  }
+ }
+
 
  
