--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,7 @@
 
 @media (min-width: 1280px) {
   .mainContainer {
-    width: 100%;
+    width: 1200px;
     padding-left: 40px;
     padding-right: 40px;
     /* border: 1px solid red; */
